--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
 
     <!-- nav  bar ----------------------------------------------->
 
-    <div class="container">
+  <div class='container'>
     <nav class= "navbar navbar-light bg-white p-3" >
-      <img class="navbar-brand" src= "images/logo.svg" alt="Significa" width= 100em/>
+      <img class="navbar-brand mb-0 h1" src= "images/logo.svg" alt="Significa"/>
       <ul class = "row">
-        <li class="nav item"><a class="navbar-brand" href="#" >Navbar</a></li>
-        <li class="nav item"><a class="navbar-brand" href="#">Services</a></li>
-        <li class="nav item"><a class="navbar-brand" href="#">About</a></li>
-        <li class="nav item"><a class="navbar-brand" href="#">Blog</a></li>
-        <li class="nav item"><a class="navbar-brand" href="#">Contact</a></li>
+        <li class="nav item"><a class="nav-link disabled" href="#" >Navbar</a></li>
+        <li class="nav item"><a class="nav-link disabled" href="#">Services</a></li>
+        <li class="nav item"><a class="nav-link disabled" href="#">About</a></li>
+        <li class="nav item"><a class="nav-link disabled" href="#">Blog</a></li>
+        <li class="nav item"><a class="nav-link disabled" href="#">Contact</a></li>
       </ul>
     </nav>
   </div>
+ 
 
     <!--Header---------------------------------------------------->
 
@@ -148,7 +149,7 @@
 
  <!-- Section 3 Whats new------------------------------------------------->
 
-      <section class="bg-dark text-white">
+      <section class="bg-dark text-white" >
         <div class="container pt-5 pb-5 pl-5">
           <div class="row mb-5 mt-5">
 
@@ -230,20 +231,20 @@
 
     <!--Section 6 Footer ------------------------------------------>
 
-    <footer>
-      <div class = ''>
-        <img src="logo" alt="office"> 
-        <p>Legal © 2019</p>
-      </div>
-      <div class = ''>
-        <h5>Say</h5>
-        <ul>
-          <li><a href="#">hello@significa.co</a></li>
-          <li>(+351) 226 001 751</li>
-        </ul>
-      </div>
-      <div class = ''>
-        <h5>Links</h5>
+    <footer class= "container">
+      <div class = 'row'>
+        <div class='col-4'
+          <p>Legal © 2019</p>
+        </div>
+        <div class = 'col-2'>
+          <h5 class='pl-5'>Say</h5>
+          <ul>
+            <li><a href="#">hello@significa.co</a></li>
+            <li>(+351) 226 001 751</li>
+          </ul>
+        </div>
+      <div class = 'col-2'>
+        <h5 class= 'pl-5'>Links</h5>
         <ul>
           <li><a href="#"></a>Home</li>
           <li><a href="#"></a>Showcase</li>
@@ -254,23 +255,20 @@
           <li><a href="#"></a>Contact</li>
         </ul>
       </div>
-      <div class = ''>
-        <h5>Network</h5>
+      <div class = 'col-2'>
+        <h5 class='pl-5'>Network</h5>
         <ul>
           <li><a href="#">Coletiv</a></li>
           <li><a href="#">Adamant</a></li>
         </ul>
       </div>
-      <div class = ''>
-        <h5>Follow us</h5>
+      <div class = 'col-2'>
+        <h5 class='pl-5'>Follow us</h5>
         <ul>
           <li><a href="#">Coletiv</a></li>
           <li><a href="#">Adamant</a></li>
         </ul>
       </div>
-
-
-
     </footer> 
   </body>
 </html>
