Chnaged height and size from containers

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
 
  <!-- Section 3 Whats new------------------------------------------------->
 
-      <section class="bg-dark text-white" >
-        <div class="container pt-5 pb-5 pl-5">
-          <div class="row mb-5 mt-5">
+      <section class="text-white " style = "background-color: black;" >
+        <div class="container pb-5 pt-5" style="height: 700px">
+          <div class="row pb-5 pt-5 mb-5 mt-5">
 
             <div class="col-5">
               <h3 class= "font-weight-light">
